--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Prime Checker</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overlock">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
 		<style>
-			input, button, body {font-family: Overlock; font-size: 30px; background: black; color: white;}
+			input, button, body {font-family: "Playfair Display"; font-size: 30px; background: black; color: white;}
       input, button {border: 5px solid white; padding: 10px; border-radius: 10px;}
 			button:hover {background: #555; cursor: pointer;}
 			button:active {background: #888;}
